--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.7.0",
+    "@react-navigation/stack": "^5.7.0",
+    "base-64": "^0.1.0",
+    "expo": "^38.0.8",
+    "firebase": "^7.16.1",
     "react": "16.13.1",
     "react-native": "0.63.1",
-    "react-native-keychain": "^6.1.1",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
     "react-native-touch-id": "^4.4.1"
   },
   "devDependencies": {
